connected-to-heroku-app

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
   </head>
   <body>
+		<wrapper>
     <h1>Matt's Tweet Poetry</h1>
-		Now is the <span id="tweets0"></span> of our discontent,<br>
-		Made <span id="tweets1"></span> by this son of York,<br>
-		And all the clouds that lour'd upon our <span id="tweets2"></span>.<br>
-		In the deep bosom of the <span id="tweets3"></span> buried.
+		Now is the <b id="tweets0"></b> of our discontent,<br>
+		Made <b id="tweets1"></b> by this son of York,<br>
+		And all the clouds that lour'd upon our <b id="tweets2"></b>.<br>
+		In the deep bosom of the <b id="tweets3"></b> buried.
+		</wrapper>
 		
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
