css-styling-and-more

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -6,27 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Matt's Tweet Poetry</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-		
+		<link rel="stylesheet" href="css/main.css">
 
   </head>
   <body>
-		<wrapper>
+		
+	  <div class = "titles">
     <h1>Matt's Tweet Poetry</h1>
-		Now is the <b id="tweets0"></b> of our discontent,<br>
-		Made <b id="tweets1"></b> by this son of York,<br>
-		And all the clouds that lour'd upon our <b id="tweets2"></b>.<br>
-		In the deep bosom of the <b id="tweets3"></b> buried.
-		</wrapper>
+		<h4>An elegant mashup of the words of T.S. Eliot and the language used by Matt Clifford on twitter.</h4>
+		</div>
+					 
+		<div id="poem">
+			<p>LET us go then, <span id="at1"></span> and I,<br>	
+			When the evening is spread out against the sky	<br>
+			Like a <span id="long1"></span> etherized upon a table;	<br>
+			Let us go, through certain <span id="long2"></span> streets,	<br>
+			The muttering retreats	        <br>
+			Of restless <span id="long3"></span> in one-night cheap hotels	<br>
+			And sawdust restaurants with oyster-shells:	<br>
+			Streets that follow like a <span id="long4"></span> argument	<br>
+			Of insidious intent	<br>
+			To lead you to an overwhelming question….	        <br>
+			Oh, do not ask, “What is <span id="hash1"></span>?”	<br>
+			Let us go and make our visit.	</p>
+			<br>
+			<p>In the room the <span id="at2"></span> come and go<br>
+			Talking of <span id="hash2"></span>.	
+			</p>
+		</div>
+		
+		<div class="footer">
+			<h4>Give the page a <a href="javascript:window.location.reload();">REFRESH</a> for a new combination!</h4>
+			<span id="message">
+				Made with a lot of love for Matt Clifford's 29th Birthday.
+			</span>
+		</div>
 		
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-		<!--Bootstrap install-->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+  
 		<!-- js files -->
 		<script src="/js/tweets.js"></script>
   </body>
